# aah-gui

./: .gitignore  README.md  flake.nix  index.html  justfile  package.json  pnpm-lock.yaml  vite.config.ts
doc/: 小学期.md  小学期_edited_by_TBW.md  测试文档.md  用户手册.md
src/: App.css  App.tsx  index.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  config.rs  main.rs  state.rs
src/components/: DeployCard.tsx  TabBar.tsx
src/pages/: Battle.tsx  Copilot.tsx  Main.tsx
